# Organoid-Analyzer

./: .gitignore  Config.py  EXPERIMENTS_GUIDE.md  FRONTEND_README.md  QUICKSTART.md  README.md  app.py  create_dataset.py  pyproject.toml  requirements.txt  results_utils.py  run_experiments.py  run_frontend.py  run_full_pipeline.py  setup.py  setup_venv.py  shap_analysis.py  test_model.py  track_cells.py  train_fusion_model.py
GigaTIME_analyzer/: run_pipeline.py
GigaTIME_analyzer/survival/: utils.py
Organoid Analyzer/: .gitignore  Config.py  RandomForest.py  UnifiedFusionModel.py  create_dataset.py  sort_images_by_XY.py  train_and_test_models.py  train_fusion_model.py
docs/: GDC_API_OUTPUT_SPEC.md  sample_gdc_annotations.csv  sample_gdc_clinical.csv
experiments/: experiments_config.json  run_experiments.py
frontend/: app.py  experiments_config.json
frontend/static/: app.js  style.css
frontend/templates/: index.html
gigatime_analyzer/: __init__.py  config.py  runtime_env.py
gigatime_analyzer/models/: __init__.py  archs.py  losses.py  utils.py
gigatime_analyzer/preprocessing/: quality.py  (+6 more)
organoid_analyzer/: __init__.py  config.py  dev_bootstrap.py  requirements.txt
static/: app.js  style.css
tcga_pipeline/: README.md  __init__.py  annotations_gdc_TCGA-BRCA.csv  annotations_gdc_TCGA-PAAD.csv  check_data.py  clinical_gdc_TCGA-BRCA.csv  clinical_gdc_TCGA-PAAD.csv  download_gdc_slides.py  gdc_config.yaml  gdc_tcga.py  run_gdc_tcga.py  run_tcga_pipeline.py  test_gdc_tcga.py
til_analyzer/: .gitignore  CustomTransformations.py  __init__.py  main_test.py
(+26 files in other folders)
