[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "organoid-analyzer"
version = "0.1.0"
description = "Organoid, TIL, GigaTIME, and TCGA pipelines"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.scripts]
organoid-dev-bootstrap = "organoid_analyzer.dev_bootstrap:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
include = ["gigatime_analyzer*", "organoid_analyzer*", "til_analyzer*", "tcga_pipeline*"]
